# course-sniper-legacy

./: Cargo.toml  README.md
.github/workflows/: release.yml
release-docs/: README-linux.md  README-macos-arm64.md  README-macos-x64.md  README-windows.md
src/: args.rs  ascii.rs  elements.rs  main.rs
