[package]
name = "course-sniper"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.13.0", features = ["attributes"] }
chromiumoxide = "0.7.0"
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
comfy-table = "7.1.3"
futures = "0.3.31"
indicatif = "0.17.9"
inquire = "0.7.5"
